--- a/foo.html
+++ b/foo.html
@@ -10,5 +10,6 @@
     <h1>yooyo</h1>
     <h1>this is foo</h1>
     <h1>this has always been foo</h1>
+    <h1>this will forever be foo</h1>
 </body>
 </html>
